lectura de texto personalizado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="container">
 			<h1>Lector de texto</h1>
-			<button id="toggle" class="btn btn-toggle">Cambiar caja de texto</button>
+			<button id="toggle" class="btn btn-toggle">Caja de texto</button>
 			<div id="text-box" class="text-box">
 				<div class="close" id="close">X</div>
 				<h3>Elige la voz</h3>
